Prevent Firefox to misalign arrows of prio input

--- a/assets/stylesheets/admin-pages.scss
+++ b/assets/stylesheets/admin-pages.scss
@@ -217,6 +217,7 @@ a.add-parent-group {
 // job templates
 .prio input {
     width: 35pt;
+    border: 1px solid #aaa; // setting the border prevents Firefox to misalign arrows for increment/decrement
 }
 
 // needle editor
